--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-websocket": "^4.3.1",
+    "recharts": "^2.5.0",
     "typescript": "5.0.2"
   }
 }
